# tree-sitter-dune

./: .editorconfig  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  go.sum  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: dependabot.yml
.github/workflows/: ci.yml  fuzz.yml  lint.yml  release.yml
bindings/c/: tree-sitter-dune.h  tree-sitter-dune.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_dune/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterDuneTests/: TreeSitterDuneTests.swift
cmake/: tree-sitter-dune-config.cmake.in
queries/: tags.scm
src/: grammar.json  node-types.json  parser.c
test/: files.txt
test/corpus/: actions.txt  deps.txt  dune-project.txt  dune-workspace.txt  lexical.txt  stanzas.txt
test/examples/: dune  dune-project  dune-workspace
