[package]
name = "tree-sitter-dune"
description = "Tree-sitter grammar for Dune build system files"
version = "0.1.0"
keywords = ["incremental", "parsing", "dune", "ocaml"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/emillon/tree-sitter-dune"
edition = "2021"
license = "MIT"

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.25"
tree-sitter-language = "~0.1"

[build-dependencies]
cc = "1.0"
