[package]
name = "tree-sitter-dune"
description = "Tree-sitter grammar for Dune build system files"
version = "0.1.0"
authors = ["Etienne Millon <me@emillon.org>"]
keywords = ["incremental", "parsing", "dune", "ocaml"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/emillon/tree-sitter-dune"
edition = "2021"
license = "MIT"
readme = "README.md"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["LICENSE", "bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1"

[dev-dependencies]
tree-sitter = "0.25"
